# zbar-1

./: .gitignore  CMakeLists.txt
examples/: CMakeCache.txt  CMakeLists.txt  scan_image.cpp
include/: config.h  zbar.h
zbar/: CMakeLists.txt  img_scanner.c  jpeg.c
zbar/processor/: posix.h
